# internal/server/grpc.go
@@ -1,34 +1,28 @@
 package server
 
 import (
-	ednv1 "SK-builder/api/edn/v1"
-	v1 "SK-builder/api/helloworld/v1"
-	"SK-builder/internal/conf"
-	"SK-builder/internal/infrastructure/p8s"
-	"SK-builder/internal/service"
-
-	prom "github.com/go-kratos/kratos/contrib/metrics/prometheus/v2"
+	v1 "SK-Builder/api/edn/v1"
+	"SK-Builder/internal/conf"
+	"SK-Builder/internal/service"
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/logging"
-	"github.com/go-kratos/kratos/v2/middleware/metrics"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
-	"github.com/go-kratos/kratos/v2/middleware/tracing"
 	"github.com/go-kratos/kratos/v2/transport/grpc"
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, receiver *service.ReceiverService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(
+	c *conf.Server,
+	edn *service.EdnService,
+	logger log.Logger,
+) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
-			tracing.Server(),
-			metrics.Server(
-				metrics.WithSeconds(prom.NewHistogram(p8s.MetricSeconds)),
-				metrics.WithRequests(prom.NewCounter(p8s.MetricRequests)),
-			),
 			logging.Server(logger),
 		),
 	}
+
 	if c.Grpc.Network != "" {
 		opts = append(opts, grpc.Network(c.Grpc.Network))
 	}
@@ -39,7 +33,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, receiver *se
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
-	ednv1.RegisterReceiverServer(srv, receiver)
+	v1.RegisterEdnServer(srv, edn)
 	return srv
 }
